--- a/popup.html
+++ b/popup.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ChatGPT Bulk Delete</title>
     <link rel="stylesheet" href="popup.css">
 </head>
+
 <body>
     <div class="header">
-        <h1>bulk-delete-chatGPT</h1>
+        <h1>Bulk Delete in Chat GPT</h1>
     </div>
     <div class="buttons-wrapper">
         <div class="buttons-row">
             <button id="add-checkboxes"><span>Add</span><br><span>Checkboxes</span></button>
-            <button id="remove-checkboxes"><span>Remove</span><br><span>Checkboxes</span></button>                       
+            <button id="remove-checkboxes"><span>Remove</span><br><span>Checkboxes</span></button>
         </div>
         <button id="toggle-checkboxes">Toggle Checkboxes</button>
         <button id="bulk-delete">Bulk Delete</button>
-    </div>      
+    </div>
     <div class="footer">
         <p id="copyright"></p>
     </div>
     <script src="popup.js"></script>
 </body>
+
 </html>
